[gd_scene load_steps=18 format=3 uid="uid://2n61ul12sveq"]

[ext_resource type="Script" uid="uid://ocrl123aymu8" path="res://Scripts/asking_for_food.gd" id="1_5nnaq"]
[ext_resource type="Texture2D" uid="uid://dtuqonsnfuy0q" path="res://Assets/Backgrounds/park_bg.png" id="2_5nnaq"]
[ext_resource type="Texture2D" uid="uid://ddhdxwpxygks4" path="res://Assets/Various/DialogBubble_2.png" id="3_0kodg"]
[ext_resource type="Texture2D" uid="uid://lqw202figqcf" path="res://Assets/Various/DreamingBubble.png" id="3_5d2v2"]
[ext_resource type="Texture2D" uid="uid://ddl0g0vqmumtc" path="res://Assets/Monsters/Nomnom.png" id="3_5nnaq"]
[ext_resource type="Texture2D" uid="uid://digbqxmhhjcoa" path="res://Assets/Buttons/exit_b.svg" id="3_d4kwd"]
[ext_resource type="Texture2D" uid="uid://icp0vm0mi3k8" path="res://Assets/Buttons/exit_b_pressed.svg" id="4_8b0wu"]
[ext_resource type="Texture2D" uid="uid://c4ehxdjv2ovsi" path="res://Image/Sandwich_1.png" id="6_j4020"]
[ext_resource type="Texture2D" uid="uid://dpadfdc5v56r4" path="res://Assets/Monsters/shadow_1.png" id="7_0kodg"]
[ext_resource type="AudioStream" uid="uid://c5evxydy7fg5k" path="res://Assets/Audios/SpeakingMonster.mp3" id="7_5nnaq"]
[ext_resource type="Texture2D" uid="uid://cimp3y4ohirfl" path="res://Assets/Buttons/continue_b.svg" id="7_yl0v3"]
[ext_resource type="Texture2D" uid="uid://dcmihu6q0ptoa" path="res://Assets/Buttons/continue_pressed_b.svg" id="8_qisw3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5d2v2"]
atlas = ExtResource("3_5d2v2")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nnaq"]
atlas = ExtResource("3_5d2v2")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kodg"]
atlas = ExtResource("3_5d2v2")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4020"]
atlas = ExtResource("3_5d2v2")
region = Rect2(512, 512, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_yl0v3"]
animations = [{
"frames": [{
"duration": 1.3,
"texture": SubResource("AtlasTexture_5d2v2")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_5nnaq")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_0kodg")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_j4020")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="asking-for-food" type="Node2D"]
script = ExtResource("1_5nnaq")

[node name="Background" type="TextureRect" parent="."]
z_index = -10
offset_left = -4.0
offset_top = -16.0
offset_right = 1280.0
offset_bottom = 840.0
texture = ExtResource("2_5nnaq")

[node name="DialogBubble" type="Sprite2D" parent="."]
visible = false
position = Vector2(888, 304)
scale = Vector2(1.1397, 1.1397)
texture = ExtResource("3_0kodg")

[node name="Sandwich" type="Sprite2D" parent="DialogBubble"]
position = Vector2(0.322002, -13.564)
scale = Vector2(0.198165, 0.198165)
texture = ExtResource("6_j4020")

[node name="DreamingBubble" type="AnimatedSprite2D" parent="."]
position = Vector2(896, 312)
scale = Vector2(0.553125, 0.553125)
sprite_frames = SubResource("SpriteFrames_yl0v3")
autoplay = "default"
frame = 3
frame_progress = 1.0
speed_scale = 0.65

[node name="TalkingAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5nnaq")

[node name="NextButton" type="TextureButton" parent="."]
visible = false
offset_left = 1052.0
offset_top = 673.0
offset_right = 1216.0
offset_bottom = 744.0
texture_normal = ExtResource("7_yl0v3")
texture_pressed = ExtResource("8_qisw3")
stretch_mode = 0

[node name="Shadow1" type="Sprite2D" parent="."]
position = Vector2(635, 621)
scale = Vector2(1.24352, 1.33333)
texture = ExtResource("7_0kodg")

[node name="Nomnom" type="Sprite2D" parent="."]
position = Vector2(632, 456)
scale = Vector2(0.851563, 0.851563)
texture = ExtResource("3_5nnaq")

[node name="BackToSelect" type="TextureButton" parent="."]
offset_left = 49.0
offset_top = 679.0
offset_right = 125.0
offset_bottom = 755.0
texture_normal = ExtResource("3_d4kwd")
texture_pressed = ExtResource("4_8b0wu")

[connection signal="pressed" from="NextButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BackToSelect" to="." method="_on_back_to_select_pressed"]
